L5：第二阶段 T8，ODS 落 HDFS 并订正「零改动」说法